<resources>
    <string name="app_name">Margdarshak</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hey, there!</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="search">Search here</string>

    <string name="mapbox_access_token">pk.eyJ1Ijoic2FuamF5Y2hhd2xhIiwiYSI6ImNrMnR3NDJpeTFicGUzbm80dnhjeGJnNXkifQ.jQZ4qTUeohs9l08WMfl7Hw</string>
    <string name="directions_activity_toast_message">Route is %1$f meters long</string>
    <string name="user_location_permission_not_granted">Location permission not granted. Continuing with default location. Permission can be granted manually in settings.</string>
    <string name="user_location_permission_explanation">Location access needed to provide easy navigation and routing features.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome %s"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Place Picker -->
    <string name="selected_place_info">Selected location information:\n%1$s</string>
    <string name="go_to_picker_activity">Go to place picker activity</string>
    <string name="available_bike_stands">Available bike stands:\n%1$s</string>
    <string name="tap_on_marker_instruction">Tap on a marker</string>
</resources>
